# BornAgain

./: .appveyor.yml  .gitlab-ci.yml  .style.yapf  .travis.yml  CHANGELOG  CMakeLists.txt  README  README.md
Core/: CMakeLists.txt
Core/Aggregate/: FTDecayFunctions.cpp  FTDecayFunctions.h  FTDistributions1D.cpp  FTDistributions1D.h  FTDistributions2D.cpp  FTDistributions2D.h  FormFactorWrapper.cpp  FormFactorWrapper.h  IInterferenceFunction.h  ILayout.h  InterferenceFunction1DLattice.cpp  InterferenceFunction2DLattice.cpp  InterferenceFunction2DLattice.h  InterferenceFunction2DParaCrystal.cpp  InterferenceFunction2DParaCrystal.h  InterferenceFunctionRadialParaCrystal.cpp  InterferenceFunctionRadialParaCrystal.h  ParticleLayout.cpp  ParticleLayout.h
Core/Basics/: BornAgainNamespace.h  Complex.h  Exceptions.cpp  Exceptions.h  ICloneable.h  INamed.h  IShareable.h  ISingleton.h  Macros.h  MathConstants.h
Core/Beam/: FootprintFactorGaussian.cpp  FootprintFactorSquare.cpp
Core/Binning/: Bin.cpp  Bin.h  ConstKBinAxis.cpp  ConstKBinAxis.h  CustomBinAxis.cpp  CustomBinAxis.h  FixedBinAxis.cpp  FixedBinAxis.h  IAxis.cpp  IAxis.h  IPixelMap.h  SimulationElement.cpp  SimulationElement.h  VariableBinAxis.cpp  VariableBinAxis.h
Core/Computation/: ComputationOutcome.h  ConstantBackground.cpp  ConstantBackground.h  DWBAComputation.cpp  DWBAComputation.h  DecoratedLayerComputation.cpp  DecoratedLayerComputation.h  DelayedProgressCounter.cpp  DelayedProgressCounter.h  DepthProbeComputation.h  GISASSpecularComputation.cpp  IBackground.h  IComputation.cpp  IComputation.h  IComputationTerm.h  InnerCounter.cpp  InnerCounter.h  MainComputation.cpp  MainComputation.h  MultiLayerUtils.cpp  MultiLayerUtils.h  NormalizingSpecularComputationTerm.cpp  NormalizingSpecularComputationTerm.h  ParticleLayoutComputation.cpp  ParticleLayoutComputation.h  PoissonNoiseBackground.cpp  PoissonNoiseBackground.h  ProcessedSample.cpp  ProcessedSample.h  ProgressHandler.cpp  ProgressHandler.h  RoughMultiLayerComputation.cpp  RoughMultiLayerComputation.h  SpecularComputation.cpp  SpecularComputation.h  SpecularComputationTerm.cpp  SpecularComputationTerm.h
Core/DecoratedFormFactor/: FormFactorDecoratorDebyeWaller.cpp  FormFactorDecoratorDebyeWaller.h  FormFactorDecoratorFactor.cpp  FormFactorDecoratorFactor.h  FormFactorDecoratorMaterial.cpp  FormFactorDecoratorMaterial.h  FormFactorDecoratorPositionFactor.cpp  FormFactorDecoratorPositionFactor.h  FormFactorDecoratorRotation.cpp  FormFactorDecoratorRotation.h  IFormFactorDecorator.h
Core/Detector/: IDetector.cpp  IDetector.h  IDetector2D.cpp  IDetector2D.h  RectangularDetector.cpp  SimpleUnitConverters.cpp  SimpleUnitConverters.h  SimulationArea.cpp
Core/Export/: ExportToPython.cpp  ExportToPython.h  PythonFormatting.cpp  PythonFormatting.h  SampleLabelHandler.cpp  SampleLabelHandler.h  SimulationToPython.cpp
Core/Fitting/: AdjustMinimizerStrategy.cpp  AdjustMinimizerStrategy.h  FitObject.cpp  FitObject.h  FitObjective.cpp  FitObjective.h  FitObjectiveInterfaceUtils.cpp  FitObjectiveInterfaceUtils.h  FitParameterLinked.cpp  FitParameterLinked.h  FitStrategyAdjustParameters.cpp  FitStrategyAdjustParameters.h  FitSuite.cpp  FitSuite.h  FitSuiteFunctions.cpp  FitSuiteFunctions.h  FitSuiteImpl.cpp  FitSuiteImpl.h  FitSuiteObjects.cpp  FitSuiteObjects.h  FitSuitePrintObserver.cpp  FitSuiteStrategies.cpp  FitSuiteStrategies.h  IFitObserver.cpp  IFitStrategy.cpp  IFitStrategy.h  IObserver.cpp  IObserver.h
Core/HardParticle/: FormFactorAnisoPyramid.cpp  FormFactorAnisoPyramid.h  FormFactorBox.cpp  FormFactorBox.h  FormFactorCone.cpp  FormFactorCone.h  FormFactorCone6.cpp  FormFactorCone6.h  FormFactorCuboctahedron.cpp  FormFactorCuboctahedron.h  FormFactorCylinder.cpp  FormFactorCylinder.h  FormFactorDodecahedron.cpp  FormFactorDodecahedron.h  FormFactorEllipsoidalCylinder.cpp  FormFactorEllipsoidalCylinder.h  FormFactorFullSphere.cpp  FormFactorFullSphere.h  FormFactorFullSpheroid.cpp  FormFactorFullSpheroid.h  FormFactorHemiEllipsoid.cpp  FormFactorHemiEllipsoid.h  FormFactorIcosahedron.cpp  FormFactorIcosahedron.h  FormFactorLongBoxGauss.cpp  FormFactorLongBoxGauss.h  FormFactorLongBoxLorentz.cpp  FormFactorLongBoxLorentz.h  FormFactorLongRipple1Gauss.cpp  FormFactorLongRipple1Gauss.h  FormFactorLongRipple1Lorentz.cpp  FormFactorLongRipple1Lorentz.h  FormFactorLongRipple2Gauss.cpp  FormFactorLongRipple2Gauss.h  FormFactorLongRipple2Lorentz.cpp  FormFactorLongRipple2Lorentz.h  FormFactorPolyhedron.cpp  FormFactorPolyhedron.h  FormFactorPrism3.cpp  FormFactorPrism3.h  (+18 more)
Core/InputOutput/: DataFormatUtils.cpp  DataFormatUtils.h  IntensityDataIOFactory.cpp  IntensityDataIOFactory.h  OutputDataReadFactory.cpp  OutputDataReadFactory.h  OutputDataReadStrategy.cpp  OutputDataReadStrategy.h  OutputDataReader.cpp  OutputDataWriteFactory.cpp  OutputDataWriteFactory.h  OutputDataWriteStrategy.cpp  OutputDataWriteStrategy.h  OutputDataWriter.cpp  TiffHandler.cpp  TiffHandler.h  boost_streams.h
Core/Instrument/: AngularSpecScan.cpp  AngularSpecScan.h  ArrayUtils.cpp  ArrayUtils.h  AxisNames.cpp  Beam.cpp  Beam.h  ChiSquaredModule.cpp  ChiSquaredModule.h  ConvolutionDetectorResolution.cpp  ConvolutionDetectorResolution.h  Convolve.cpp  Convolve.h  CumulativeValue.cpp  CumulativeValue.h  DetectionProperties.cpp  DetectionProperties.h  DetectorFunctions.cpp  DetectorFunctions.h  DetectorMask.cpp  DetectorMask.h  FitElement.cpp  FitElement.h  FlatDetector.cpp  FlatDetector.h  Histogram1D.cpp  Histogram1D.h  Histogram2D.cpp  Histogram2D.h  IChiSquaredModule.cpp  IChiSquaredModule.h  IDetector.cpp  IDetector.h  IDetector2D.cpp  IDetector2D.h  IDetectorResolution.h  IHistogram.cpp  IHistogram.h  IIntensityFunction.h  IIntensityNormalizer.cpp  (+38 more)
Core/Lattice/: ISelectionRule.h  Lattice.cpp  Lattice.h  Lattice2DParameters.cpp
Core/Mask/: Ellipse.cpp  Ellipse.h  IShape2D.h  InfinitePlane.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h
Core/Material/: BaseMaterialImpl.h  HomogeneousMagneticMaterial.cpp  HomogeneousMagneticMaterial.h  (+16 more)
Fit/: CMakeLists.txt
(+799 files in other folders)
